--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Geoinformática</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -69,10 +69,13 @@
 
 			<!-- Banner -->
 				<section id="banner">
+					<img src="images/banner.jpg" alt="" width="100%" height="100%"/>
 					<header>
-						<h4>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h4>
+						
+						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
 						<a href="#" class="button">Learn More</a>
 					</header>
+				    
 				</section>
 
 			<!-- Gigantic Heading -->
@@ -90,18 +93,18 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="https://atom.io/" class="image left"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Atom</h3>
+										<h3><a href="https://atom.io/">Atom</a></h3>
 										<p>Editor de código fuente de código abierto para macOS, Linux, y Windows​ con soporte para múltiples plug-in escritos en Node.js y control de versiones Git integrado, desarrollado por GitHub.</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://www.qgis.org/es/site/" class="image left"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>QGis</h3>
+										<h3><a href="https://www.qgis.org/es/site/">QGis</a></h3>
 										<p>QGIS es una aplicación profesional de SIG que esta construida sobre Software Libre y de Código Abierto (FOSS). Corre sobre Linux, Unix, Mac OSX, Windows y Android y soporta numerosos formatos y funcionalidades de datos vector, datos ráster y bases de datos.</p>
 									</div>
 								</div>
@@ -110,18 +113,18 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://rstudio.com/" class="image left"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>RStudio</h3>
+										<h3><a href="https://rstudio.com/">RStudio</a></h3>
 										<p>Entorno de desarrollo integrado para el lenguaje de programación R, dedicado a la computación estadística y gráficos. Incluye una consola, editor de sintaxis que apoya la ejecución de código, así como herramientas para el trazado, la depuración y la gestión del espacio de trabajo.</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://code.visualstudio.com/" class="image left"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="inner">
-										<h3>Visual Studio Code</h3>
+										<h3><a href="https://code.visualstudio.com/">Visual Studio Code</a></h3>
 										<p>Visual Studio Code es un editor de código fuente desarrollado por Microsoft para Windows, Linux y macOS. Incluye soporte para la depuración, control integrado de Git, resaltado de sintaxis, finalización inteligente de código, fragmentos y refactorización de código. </p>
 									</div>
 								</div>
@@ -195,12 +198,12 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.dropotron.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
