--- a/Proyecto.html
+++ b/Proyecto.html
@@ -129,8 +129,8 @@
 						<section class="col-3 col-6-narrower col-12-mobilep">
 							<h3>Otros enlaces</h3>
 							<ul class="links">
-								<li><a href="#">Leaflet</a></li>
-								<li><a href="#">Python</a></li>
+								<li><a href="leafletjs.com">Leaflet</a></li>
+								<li><a href="https://www.python.org/">Python</a></li>
 							</ul>
 						</section>
 						<section class="col-6 col-12-narrower">
