--- a/Proyecto.html
+++ b/Proyecto.html
@@ -179,10 +179,10 @@
 
 	<!-- Scripts -->
 		<script src="js/jquery.min.js"></script>
-		<script src="ajs/jquery.dropotron.min.js"></script>
+		<script src="js/jquery.dropotron.min.js"></script>
 		<script src="js/browser.min.js"></script>
 		<script src="js/breakpoints.min.js"></script>
-		<script src="ajs/util.js"></script>
+		<script src="js/util.js"></script>
 		<script src="js/main.js"></script>
 
 </body>
